# arena_ros2_jazzy

./: .gitignore  README.md  test.py
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  requirements.txt
install/: local_setup.sh  setup.sh
install/mocap_interfaces/lib/mocap_interfaces/: webcam_node
install/mocap_interfaces/share/mocap_interfaces/: package.ps1  package.sh
install/system_logic/lib/system_logic/: target_subscriber
log/: latest_build
src/kinect_ros2/: CMakeLists.txt
src/kinect_ros2/src/: kinect_ros2_component.cpp
src/log/: latest_build
src/mocap_interfaces/: CMakeLists.txt  package.xml
src/mocap_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/mocap_interfaces/install/mocap_interfaces/share/mocap_interfaces/: package.dsv  package.ps1  package.sh
src/mocap_interfaces/log/: latest_build
src/mocap_interfaces/msg/: Blob.msg  BlobArray.msg  Target.msg
src/mocap_interfaces/src/: webcam_publisher_node.cpp
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/src/: spiral_function.cpp
src/ros2_bridge/: mocaprasp_gui_ros copy.py  mocaprasp_gui_ros.py  package.xml  setup.py  udptest.py
src/ros2_bridge/launch/: server_launch.py
src/ros2_bridge/ros2_bridge/: udp_bridge_node.py
src/system_logic/: package.xml  setup.cfg  setup.py
src/system_logic/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/system_logic/log/: latest_build
src/system_logic/system_logic/: picamera_node.py  target_detector_node.py  target_subscriber_node.py
(+36 files in other folders)
